<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:id="@+id/item_1"
    android:title="@string/form_item_menu"
    app:showAsAction="never"
    />

    <item
    android:id="@+id/item_2"
    android:title="@string/list_item_menu"
    app:showAsAction="never"
    />

    <item
    android:id="@+id/item_3"
    android:title="@string/facebook_item_menu"
    app:showAsAction="never"
    />

    <item
        android:id="@+id/item_4"
        android:title="@string/github_item_menu"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/item_5"
        android:title="@string/settings_item_menu"
        app:showAsAction="never"
        />

</menu>